# pymillcam

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: pymillcam_plan.md  pymillcam_test_plan.md
examples/: 50mm_circle.dxf  README.md  circle_cutout.pmc  motor_section_wall.dxf
scripts/: generate_gear_dxf.py
src/pymillcam/: __main__.py
src/pymillcam/core/: commands.py  containment.py  feeds_speeds.py  geometry.py  machine.py  machine_library.py  offsetter.py  operations.py  path_stitching.py  preferences.py  project.py  segments.py  selection.py  tool_library.py  tools.py
src/pymillcam/engine/: common.py  drill.py  ir.py  ir_walker.py  optimizer.py  pocket.py  profile.py  services.py  tabs.py  time_estimate.py
src/pymillcam/engine/pocket/: __init__.py  _shared.py  offset.py  rest_machining.py  spiral.py  zigzag.py
src/pymillcam/io/: __init__.py  dxf_import.py  project_io.py
src/pymillcam/post/: __init__.py  _basic.py  base.py  grbl.py  uccnc.py
src/pymillcam/ui/: __init__.py  box_selection.py  feeds_speeds_dialog.py  machine_dialog.py  machine_library_dialog.py  main_window.py  preferences_dialog.py  properties_panel.py  tool_library_dialog.py  viewport.py
src/pymillcam/ui/wizards/: __init__.py  base.py
tests/fixtures/dxf/: README.md  bulged_polyline.dxf  dogbone_pocket.dxf  enclosure_top.dxf  full_circle_hole.dxf  gear_profile.dxf  island_near_concave_wall.dxf  narrow_slot.dxf  nested_pockets.dxf  rounded_rect_with_slot.dxf  v_notch_pocket.dxf
tests/test_core/: test_commands.py  test_containment.py  test_feeds_speeds.py  test_geometry.py  test_machine_library.py  test_offsetter.py  test_operations.py  test_path_stitching.py  test_preferences.py  test_project.py  test_segments.py  test_selection.py  test_tool_library.py
tests/test_engine/: test_common.py  test_drill.py  test_ir_walker.py  test_optimizer.py  test_pocket.py  test_profile.py  test_services.py  test_tabs.py  test_time_estimate.py
tests/test_io/: test_dxf_import.py  test_project_io.py
tests/test_post/: test_grbl.py  test_registry.py  test_uccnc.py
tests/test_ui/: test_box_selection.py  test_feeds_speeds_dialog.py  test_machine_dialog.py  test_machine_library_dialog.py  test_main_window.py  test_preferences_dialog.py  test_properties_panel.py  test_tool_library_dialog.py  test_viewport.py  test_viewport_arc_rendering.py  test_wizards_base.py
